# kukuri

./: Cargo.toml  readme.md
examples/kukuri_example_ja/: config.toml  kukuri_dialog1_ja.kkr  kukuri_dialog1_ja.md  kukuri_dialog2_ja.kkr  kukuri_dialog2_ja.md  kukuri_dialog3_ja.kkr  talkers.kkrt
src/: cli.rs  main.rs
src/config/: mod.rs
src/core/: config.rs  dialog.rs  kukuri_data.rs  mod.rs  talker.rs  utils.rs
src/export/: gd.rs  json.rs  mod.rs  po.rs
src/import/: kukuri.rs  kukuri_script.rs  kukuri_talkers.rs  mod.rs
src/templates/: gd  po
src/utils/: mod.rs
