[package]
name = "kukuri"
version = "0.1.0"
authors = ["dettalant <lilac@dettalant.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2" }
serde = { version = "1.0.117", features = ["derive"]}
toml = "0.5.7"
