[package]
name = "kukuri"
version = "0.1.4"
authors = ["dettalant <lilac@dettalant.com>"]
description = "A versatile dialog text compiler for game develop."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2" }
serde = { version = "1.0.117", features = ["derive"]}
serde_json = "1.0.59"
serde_repr = "0.1.6"
toml = "0.5.7"
